# bag_converter

./: .clang-format  .clang-tidy  .cppcheck_suppressions  .gitignore  .gitmodules  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .shellcheckrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  bag_converter  repos.yaml
.github/workflows/: cppcheck.yml  docker-publish.yml  pre-commit.yaml  pre-commit.yml
docker/: Dockerfile  build.sh  entrypoint.sh
docs/: en_xyzit.md  flags.md  lidar_type.md  nebula_packets_vs_seyond_scan.md  seyond_intensity_scaling.md  seyond_packet_protocol_versions.md  seyond_ros_driver_tier4_vs_original.md
scripts/: README.md  decode_pointcloud2.py  plot_field_distribution.py  requirements.txt  shift_topic_timestamp.py
src/app/: CMakeLists.txt  package.xml
src/bag_converter/: .gitignore  CMakeLists.txt  package.xml
src/bag_converter/include/: bag_converter.hpp  base_decoder.hpp  header_stamp.hpp  memory_management.hpp  merge.hpp  nebula_decoder.hpp  point_types.hpp  remove_stale_temp_dir.hpp  seyond_decoder.hpp  tf_transformer.hpp  timescale.hpp
src/bag_converter/msg/: SeyondPacket.msg  SeyondScan.msg
src/bag_converter/src/: bag_converter.cpp  header_stamp.cpp  memory_management.cpp  merge.cpp  nebula_decoder.cpp  seyond_decoder.cpp  seyond_nebula_bag_decoder.cpp  tf_transformer.cpp  timescale.cpp
src/bag_manipulate/: CMakeLists.txt
src/bag_manipulate/src/: bag_manipulate.cpp  seyond_bag_decoder.cpp  seyond_nebula_bag_decoder.cpp
src/nebula_decoder/: CMakeLists.txt  package.xml
src/nebula_decoder/include/nebula_decoder/: nebula_decoder_node.hpp
src/nebula_decoder/launch/: nebula_decoder.launch.py
src/nebula_decoder/src/: nebula_decoder_node.cpp  nebula_decoder_node_main.cpp
src/seyond_decoder/: CMakeLists.txt
src/seyond_decoder/example/: decoder_example.cpp
src/seyond_decoder/include/seyond_decoder/: point_types.h  seyond_decoder.hpp
src/seyond_decoder/src/: seyond_decoder.cpp
src/seyond_nebula_decoder/: CMakeLists.txt  README.md  package.xml
src/seyond_nebula_decoder/include/seyond_nebula_decoder/: seyond_nebula_decoder.hpp
src/seyond_nebula_decoder/src/: seyond_nebula_decoder.cpp
