<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_converter</name>
  <version>0.7.0</version>
  <description>PointCloud2 decoder for Seyond LiDAR data in rosbag2 format</description>
  <maintainer email="mineto.tsukada@tier4.jp">Mineto Tsukada</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_storage_default_plugins</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>nebula_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>can_msgs</depend>
  <depend>oxts_msgs</depend>
  <depend>seyond</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
