<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seyond_nebula_decoder</name>
  <version>0.1.0</version>
  <description>Library for converting Nebula packets to point clouds for Seyond LiDAR</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>nebula_msgs</depend>
  <depend>nebula_decoders</depend>
  <depend>nebula_common</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>